# kri_libs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  example.ipynb  make.bat
kri_lib/: env.py  helper.py  models.py  request.py
kri_libs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/kri_lib/: enum.py  exceptions.py
src/kri_lib/auth/: authentication.py  exceptions.py  jwt.py
src/kri_lib/conf/: constants.py  settings.py
src/kri_lib/core/: __init__.py  globals.py  models.py  permissions.py  serializers.py
src/kri_lib/db/: connection.py  exceptions.py  utils.py
src/kri_lib/logger/: __init__.py  document.py  handler.py  middleware.py  notification.py  utils.py
src/kri_lib/management/commands/: check_env.py
src/kri_lib/notification/: firebase.py
src/kri_lib/services/internal/: __init__.py  base.py  conf.py  helper.py
src/kri_lib/services/internal/backoffice/: conf.py  helper.py
src/kri_lib/services/internal/commerce/: conf.py  helper.py
src/kri_lib/services/internal/payment/: conf.py  helper.py
src/kri_lib/services/internal/sso/: conf.py  helper.py  models.py
src/kri_lib/services/internal/wallet/: conf.py  helper.py  serializers.py
src/kri_lib/utils/: __init__.py  common.py  helper.py  otp.py  requests.py  settings.py
tests/: test_kri_lib.py
