[tool.poetry]
name = "kri_lib"
version = "0.2.4"
description = "Utility for KRI"
authors = ["Rimba Prayoga"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=3.2.11, <4.0.0"
PyJWT = ">=1.7.1, <2.0.0"
djangorestframework = ">=3.13.1"
requests = ">=2.28.1"
pymongo = ">=4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "poetry_core>=1.0.0", "pycparser"]
build-backend = "poetry.core.masonry.api"
